changed media files

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
     <section id="slider" class="slider slider-layout1">
       
         <div class="slide-item align-v-h text-center bg-overlay">
-          <video class="videoBgWrapper" loop muted autoplay poster="img/videoframe.jpg" class="videoBg">
-            <source src="./Assets/Video/jumbo_hXWK4WqH.mp4"  type="video/mp4" >
-          </video>
+          <div class="videoBgWrapper"><img src="assets/images/backgrounds/pensive-tattooed-man-is-relaxing-on-the-armchair-a-C5R7XCQ.jpg" alt="slide img"></div>
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12">
