adjust header issue

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
     ============================== -->
     <section id="slider" class="slider slider-layout1">
-      <div class="videoBgWrapper" class="videoBg"><img src="assets/images/backgrounds/pensive-tattooed-man-is-relaxing-on-the-armchair-a-C5R7XCQ.jpg" alt="slide img"></div>
+      <div class="videoBgWrapper" width="500" height="500"><img src="assets/images/backgrounds/pensive-tattooed-man-is-relaxing-on-the-armchair-a-C5R7XCQ.jpg" alt="slide img"></div>
         <div class="slide-item align-v-h text-center bg-overlay">
          
           <div class="container">
